dark mode issue fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,10 +25,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-html {
-  color-scheme: dark;
-}
-
 .scrollbar-hidden {
   -ms-overflow-style: none;
   scrollbar-width: none;
